designed page layout

--- a/testTask/src/app/app.component.html
+++ b/testTask/src/app/app.component.html
@@ -1,2 +1,10 @@
-
+<div id="mainCont">
+    <div id="leftCont">
+        <app-search></app-search>
+        <app-clients-list></app-clients-list>
+    </div>
+    <div id="rightCont">
+        <app-client-details></app-client-details>
+    </div>
+</div>
 
