clients list component is ready

--- a/testTask/src/app/app.component.html
+++ b/testTask/src/app/app.component.html
@@ -1,7 +1,9 @@
 <div id="mainCont">
     <div id="leftCont">
         <app-search></app-search>
-        <app-clients-list></app-clients-list>
+        <div id="wrapper">
+            <app-clients-list></app-clients-list>
+        </div>
     </div>
     <div id="rightCont">
         <app-client-details></app-client-details>
