--- a/testTask/src/app/app.component.css
+++ b/testTask/src/app/app.component.css
@@ -7,12 +7,22 @@
     display: flex;
 }
 #leftCont{
-    background: gray;
     width: 35%;
     height: 100%;
 }
+#wrapper{
+    overflow-y: scroll;
+    width: 100%;
+    height: 90%;
+}
+#wrapper::-webkit-scrollbar {
+    background-color: #F5F5F5;
+}
+#wrapper::-webkit-scrollbar-thumb {
+    background-color: #000000;
+}
 #rightCont{
-    background: yellow;
+    background: dimgray;
     width: 65%;
     height: 100%;
 }
