client details component is ready

--- a/testTask/src/app/app.component.css
+++ b/testTask/src/app/app.component.css
@@ -22,7 +22,7 @@
     background-color: #000000;
 }
 #rightCont{
-    background: dimgray;
+    background: darkgray;
     width: 65%;
     height: 100%;
 }
