--- a/testTask/src/app/search/search.component.html
+++ b/testTask/src/app/search/search.component.html
@@ -1,1 +1,2 @@
-<input type="search" id="searchDiv" placeholder="Search the client...">
+<input type="search" id="searchDiv" placeholder="Search the client..." [(ngModel)]="searchText">
+
